nomainiju visu hardcoded textu uz string failu lai var mainit valodas

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,9 +18,9 @@
         android:layout_marginRight="90dp"
         android:background="@drawable/rounded_button"
         android:shadowColor="#00000000"
-        android:text="colors"
-        android:textSize="25dp"
-        android:fontFamily="@font/peace_sans"
+        android:text="@string/main_button_colors"
+        android:textSize="25sp"
+        app:fontFamily="@font/peace_sans"
         android:textAllCaps="false"
         android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,9 +39,9 @@
         android:layout_marginRight="90dp"
         android:background="@drawable/rounded_button"
         android:shadowColor="#00000000"
-        android:text="shapes"
-        android:textSize="25dp"
-        android:fontFamily="@font/peace_sans"
+        android:text="@string/main_button_shapes"
+        android:textSize="25sp"
+        app:fontFamily="@font/peace_sans"
         android:textAllCaps="false"
         android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,9 +60,9 @@
         android:layout_marginRight="90dp"
         android:background="@drawable/rounded_button"
         android:shadowColor="#00000000"
-        android:text="animals"
-        android:textSize="25dp"
-        android:fontFamily="@font/peace_sans"
+        android:text="@string/main_button_animals"
+        android:textSize="25sp"
+        app:fontFamily="@font/peace_sans"
         android:textAllCaps="false"
         android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +72,7 @@
 
     <ImageView
         android:id="@+id/imageView"
+        android:contentDescription="@string/image_desc"
         android:layout_width="329dp"
         android:layout_height="180dp"
         android:layout_marginStart="16dp"
@@ -93,11 +94,11 @@
         android:layout_marginEnd="90dp"
         android:layout_marginRight="90dp"
         android:background="@drawable/rounded_button"
-        android:fontFamily="@font/peace_sans"
+        app:fontFamily="@font/peace_sans"
         android:shadowColor="#00000000"
-        android:text="counting"
+        android:text="@string/main_button_counting"
         android:textAllCaps="false"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -114,10 +115,10 @@
         android:layout_marginRight="24dp"
         android:layout_marginBottom="28dp"
         android:background="@drawable/rounded_information"
-        android:fontFamily="@font/peace_sans"
-        android:text="i"
+        app:fontFamily="@font/peace_sans"
+        android:text="@string/main_information"
         android:textAllCaps="false"
-        android:textSize="40dp"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.375"
