--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EBF36A"
+    android:background="#ffeaa7"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/homebtn"
-        android:layout_width="78dp"
-        android:layout_height="82dp"
+        android:layout_width="72dp"
+        android:layout_height="71dp"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
 
@@ -22,20 +22,44 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
         android:layout_width="321dp"
         android:layout_height="549dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/rounded_rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" >
+
+        <TextView
+            android:id="@+id/messageTextView"
+            android:layout_width="match_parent"
+            android:layout_height="61dp"
+            app:fontFamily="@font/peace_sans"
+            android:gravity="center"
+            android:text="@string/counting_game_head"
+            android:textColor="#ffeaa7"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/messageTextView2"
+            android:layout_width="250dp"
+            android:layout_height="358dp"
+            android:layout_gravity="center"
+            app:fontFamily="@font/peace_sans"
+            android:text="@string/counting_game_ins"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+
+    </FrameLayout>
 
 
 
