--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,6 +106,27 @@
         app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
+        android:id="@+id/langbutton"
+        android:layout_width="114dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginRight="90dp"
+        android:background="@drawable/rounded_button"
+        android:shadowColor="#00000000"
+        android:text="@string/lang"
+        android:textAllCaps="false"
+        android:textSize="15sp"
+        android:typeface="normal"
+        app:fontFamily="@font/peace_sans"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
+
+    <Button
         android:id="@+id/button5"
         android:layout_width="70dp"
         android:layout_height="66dp"
@@ -123,6 +144,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.375"
         app:layout_constraintStart_toStartOf="parent" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
