--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,27 @@
     android:background="#74b9ff"
     tools:context=".MainActivity">
 
+
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/btnColor"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="90dp"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="90dp"
         android:layout_marginRight="90dp"
+        android:layout_marginBottom="50dp"
         android:background="@drawable/rounded_button"
+        android:fontFamily="@font/peace_sans"
         android:shadowColor="#00000000"
         android:text="@string/main_button_colors"
-        android:textSize="25sp"
-        app:fontFamily="@font/peace_sans"
         android:textAllCaps="false"
+        android:textSize="25dp"
         android:typeface="normal"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -34,34 +38,37 @@
         android:layout_height="60dp"
         android:layout_marginStart="90dp"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="90dp"
         android:layout_marginRight="90dp"
         android:background="@drawable/rounded_button"
+        android:fontFamily="@font/peace_sans"
         android:shadowColor="#00000000"
         android:text="@string/main_button_shapes"
-        android:textSize="25sp"
+
         app:fontFamily="@font/peace_sans"
         android:textAllCaps="false"
+        android:textSize="25dp"
         android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn" />
+        app:layout_constraintTop_toBottomOf="@+id/btnColor" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnAnimal"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="90dp"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="90dp"
         android:layout_marginRight="90dp"
         android:background="@drawable/rounded_button"
+
         android:shadowColor="#00000000"
         android:text="@string/main_button_animals"
-        android:textSize="25sp"
+        android:textSize="25dp"
         app:fontFamily="@font/peace_sans"
         android:textAllCaps="false"
         android:typeface="normal"
@@ -90,30 +97,31 @@
         android:layout_height="60dp"
         android:layout_marginStart="90dp"
         android:layout_marginLeft="90dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="90dp"
         android:layout_marginRight="90dp"
         android:background="@drawable/rounded_button"
-        app:fontFamily="@font/peace_sans"
+        android:fontFamily="@font/peace_sans"
         android:shadowColor="#00000000"
         android:text="@string/main_button_counting"
         android:textAllCaps="false"
-        android:textSize="25sp"
+        android:textSize="25dp"
         android:typeface="normal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/btnAnimal" />
 
     <Button
         android:id="@+id/langbutton"
         android:layout_width="114dp"
         android:layout_height="62dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="555dp"
         android:layout_marginEnd="90dp"
         android:layout_marginRight="90dp"
+        android:layout_marginBottom="25dp"
         android:background="@drawable/rounded_button"
         android:shadowColor="#00000000"
         android:text="@string/lang"
@@ -121,30 +129,32 @@
         android:textSize="15sp"
         android:typeface="normal"
         app:fontFamily="@font/peace_sans"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button5"
-        android:layout_width="70dp"
+        android:id="@+id/btn_info"
+        android:layout_width="65dp"
         android:layout_height="66dp"
-        android:layout_marginStart="325dp"
-        android:layout_marginLeft="325dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="555dp"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="25dp"
         android:background="@drawable/rounded_information"
-        app:fontFamily="@font/peace_sans"
         android:text="@string/main_information"
         android:textAllCaps="false"
-        android:textSize="40sp"
+        android:textSize="40dp"
+        app:fontFamily="@font/peace_sans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.375"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
