--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -9,12 +9,12 @@
 
     <Button
         android:id="@+id/homebtn"
-        android:layout_width="72dp"
-        android:layout_height="71dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
 
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:background="@mipmap/home_round"
@@ -25,42 +25,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
-        android:layout_width="321dp"
-        android:layout_height="549dp"
+        android:layout_width="304dp"
+        android:layout_height="474dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="150dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/rounded_rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
-
-        <TextView
-            android:id="@+id/messageTextView"
-            android:layout_width="match_parent"
-            android:layout_height="61dp"
-            app:fontFamily="@font/peace_sans"
-            android:gravity="center"
-            android:text="@string/counting_game_head"
-            android:textColor="#ffeaa7"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/messageTextView2"
-            android:layout_width="250dp"
-            android:layout_height="358dp"
-            android:layout_gravity="center"
-            app:fontFamily="@font/peace_sans"
-            android:text="@string/counting_game_ins"
-            android:textColor="#ffffff"
-            android:textSize="20sp" />
-
-    </FrameLayout>
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.808" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
