--- a/app/src/main/res/layout/activity_animal.xml
+++ b/app/src/main/res/layout/activity_animal.xml
@@ -151,8 +151,10 @@ app:layout_constraintVertical_bias="0.808">
         android:layout_marginRight="30dp"
         android:layout_marginBottom="25dp"
         android:background="@drawable/rounded_button"
+        android:clickable="false"
         android:fontFamily="@font/peace_sans"
         android:gravity="center"
+        android:onClick="buttonPressed"
         android:shadowColor="#00000000"
         android:text="@string/animal_gameText5"
         android:textSize="24sp"
