--- a/app/src/main/res/layout/activity_animal_game.xml
+++ b/app/src/main/res/layout/activity_animal_game.xml
@@ -54,10 +54,10 @@
 
             android:textStyle="bold" />
 
-        <EditText
+        <TextView
 
             android:id="@+id/randVal"
-            android:layout_width="250dp"
+            android:layout_width="265dp"
             android:layout_height="75dp"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="50dp"
@@ -65,8 +65,9 @@
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="0dp"
-
             android:gravity="center"
+            android:text=" "
+            android:textColor="#FFFFFF"
             android:textSize="45sp"
             android:textStyle="bold" />
 
@@ -100,23 +101,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_marginTop="90dp"
+            android:background="@android:color/holo_blue_light"/>
+
         <TextView
             android:id="@+id/textView15"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Your answer:"
-            android:textColor="#FFFFFF"
+            android:textColor="#FDFDFD"
             android:textSize="30sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView16"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/correctStr"
+            android:layout_width="270dp"
+            android:layout_height="75dp"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="100dp"
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="0dp"
@@ -130,13 +137,12 @@
             android:visibility="invisible" />
 
         <TextView
-            android:id="@+id/textView17"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
+            android:id="@+id/incorrectStr"
+            android:layout_width="270dp"
+            android:layout_height="75dp"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="50dp"
-            android:layout_marginTop="120dp"
-            android:visibility="invisible"
+            android:layout_marginTop="100dp"
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="0dp"
@@ -145,14 +151,15 @@
             android:text="Incorrect!"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
+            android:textStyle="bold"
 
-            android:textStyle="bold" />
+            android:visibility="invisible" />
 
-        <EditText
+        <TextView
 
             android:id="@+id/et_value"
-            android:layout_width="250dp"
-            android:layout_height="70dp"
+            android:layout_width="260dp"
+            android:layout_height="55dp"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="40dp"
@@ -161,7 +168,7 @@
             android:layout_marginBottom="0dp"
             android:gravity="center"
 
-            android:inputType="textMultiLine"
+
             android:textSize="45sp"
             android:textStyle="bold" />
     </FrameLayout>
