laboju VISUS errorus, nocentreeju visus layoutus un pievienoju counting game ar instrukcijam un pogam

--- a/app/src/main/res/layout/activity_animal_game.xml
+++ b/app/src/main/res/layout/activity_animal_game.xml
@@ -48,7 +48,7 @@
             android:layout_width="250dp"
             android:layout_height="69dp"
             android:gravity="center"
-            android:text="Animal:"
+            android:text="@string/animal_game_started_text1"
             android:textColor="#FFFFFF"
             android:textSize="42sp"
 
@@ -66,7 +66,7 @@
             android:layout_marginRight="50dp"
             android:layout_marginBottom="0dp"
             android:gravity="center"
-            android:text=" "
+            android:text="@string/animal_game_started_text2"
             android:textColor="#FFFFFF"
             android:textSize="45sp"
             android:textStyle="bold" />
@@ -81,9 +81,9 @@
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
-        android:text="Scan"
+        android:text="@string/animal_game_started_text3"
         android:background="@drawable/rounded_button"
-        android:fontFamily="@font/peace_sans"
+        app:fontFamily="@font/peace_sans"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
         android:layout_height="188dp"
         android:layout_marginTop="100dp"
         android:background="@drawable/rounded_rectangle"
-        android:fontFamily="@font/peace_sans"
+        app:fontFamily="@font/peace_sans"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/dPreview"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +112,7 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Your answer:"
+            android:text="@string/animal_game_started_text4"
             android:textColor="#FDFDFD"
             android:textSize="30sp"
             android:textStyle="bold" />
@@ -127,9 +127,8 @@
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="0dp"
-            android:layout_weight="1"
             android:gravity="center"
-            android:text="Correct!"
+            android:text="@string/animal_game_started_text5"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
             android:textStyle="bold"
@@ -146,9 +145,8 @@
             android:layout_marginEnd="50dp"
             android:layout_marginRight="50dp"
             android:layout_marginBottom="0dp"
-            android:layout_weight="1"
             android:gravity="center"
-            android:text="Incorrect!"
+            android:text="@string/animal_game_started_text6"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
             android:textStyle="bold"
