--- a/app/src/main/res/layout/activity_counting_info.xml
+++ b/app/src/main/res/layout/activity_counting_info.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".color">
+    android:background="#ffeaa7"
+    tools:context=".MainActivity">
 
     <Button
         android:id="@+id/homebtn"
@@ -24,12 +25,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/btnAudioInfo"
+        android:id="@+id/btnAudioInfo3"
 
         android:layout_width="55dp"
         android:layout_height="55dp"
 
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="345dp"
         android:layout_marginEnd="230dp"
         android:layout_marginRight="250dp"
         android:background="@mipmap/audio_round"
@@ -41,13 +42,12 @@
         app:layout_constraintVertical_bias="0.542" />
 
     <FrameLayout
-        android:layout_width="310dp"
-        android:layout_height="470dp"
+        android:layout_width="304dp"
+        android:layout_height="474dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="20dp"
         android:background="@drawable/rounded_rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,8 +55,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
 
+
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button3"
             android:layout_width="160dp"
             android:layout_height="50dp"
             android:layout_marginStart="77dp"
@@ -77,7 +78,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView14"
             android:layout_width="237dp"
             android:layout_height="90dp"
             android:layout_marginStart="37dp"
@@ -87,14 +88,14 @@
             android:layout_marginRight="200dp"
             app:fontFamily="@font/peace_sans"
             android:gravity="center"
-            android:text="@string/recognition_game_text"
+            android:text="@string/counting_game_head"
             android:textColor="#FFE683"
             android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/textView16"
             android:layout_width="237dp"
-            android:layout_height="wrap_content"
+            android:layout_height="119dp"
             android:layout_marginStart="40dp"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="90dp"
@@ -102,42 +103,12 @@
             android:layout_marginRight="200dp"
             app:fontFamily="@font/peace_sans"
 
-            android:text="@string/START_colorGame_text1"
-            android:textColor="#FFEFFF"
+            android:text="@string/counting_game_ins"
+            android:textColor="#FFFFFF"
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/textView5"
-            android:layout_width="237dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="195dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginRight="200dp"
-            app:fontFamily="@font/peace_sans"
-
-            android:text="@string/START_colorGame_text2"
-            android:textColor="#FFEFFF"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="237dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="250dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginRight="200dp"
-            app:fontFamily="@font/peace_sans"
-
-            android:text="@string/START_colorGame_text3"
-            android:textColor="#FFEFFF"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textView19"
             android:layout_width="237dp"
             android:layout_height="70dp"
             android:layout_marginStart="40dp"
@@ -147,19 +118,23 @@
             android:layout_marginRight="200dp"
             app:fontFamily="@font/peace_sans"
             android:gravity="center"
-            android:text="@string/START_colorGame_text4"
+            android:text="@string/counting_game_ins3"
             android:textColor="#FFEFFF"
             android:textSize="18sp" />
 
-        <LinearLayout
-            android:id="@+id/cPreview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-
-        </LinearLayout>
-
+        <TextView
+            android:id="@+id/textView17"
+            android:layout_width="wrap_content"
+            android:layout_height="95dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginRight="0dp"
+            app:fontFamily="@font/peace_sans"
+            android:text="@string/counting_game_ins2"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
 
     </FrameLayout>
 
