--- a/app/src/main/res/layout/activity_counting_info.xml
+++ b/app/src/main/res/layout/activity_counting_info.xml
@@ -58,7 +58,7 @@
 
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/countingStart"
             android:layout_width="160dp"
             android:layout_height="50dp"
             android:layout_marginStart="77dp"
