--- a/app/src/main/res/layout/activity_animal.xml
+++ b/app/src/main/res/layout/activity_animal.xml
@@ -48,6 +48,8 @@ android:id="@+id/aPreview">
         app:layout_constraintVertical_bias="0.542" />
 
     <FrameLayout
+        android:id="@+id/startScreenAnimalFrameL"
+        style=""
         android:layout_width="310dp"
         android:layout_height="470dp"
         android:layout_marginStart="50dp"
