--- a/app/src/main/res/layout/activity_animal_game.xml
+++ b/app/src/main/res/layout/activity_animal_game.xml
@@ -80,13 +80,29 @@
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="80dp"
+        android:background="@drawable/rounded_button"
         android:text="@string/animal_game_started_text3"
+        android:textSize="30sp"
+        app:fontFamily="@font/peace_sans"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn_reload"
+
+
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="@string/animal_game_reload"
         android:background="@drawable/rounded_button"
         app:fontFamily="@font/peace_sans"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"/>
 
     <FrameLayout
         android:layout_width="270dp"
@@ -99,6 +115,24 @@
         app:layout_constraintEnd_toEndOf="@+id/dPreview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+
+            android:id="@+id/et_value"
+            android:layout_width="260dp"
+            android:layout_height="55dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="0dp"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+
+            android:textSize="45sp"
+            android:textStyle="bold"
+            app:fontFamily="@font/peace_sans" />
 
         <View
             android:layout_width="match_parent"
@@ -150,22 +184,5 @@
             android:visibility="invisible"
             app:fontFamily="@font/peace_sans" />
 
-        <TextView
-
-            android:id="@+id/et_value"
-            android:layout_width="260dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginBottom="0dp"
-            android:gravity="center"
-            app:fontFamily="@font/peace_sans"
-
-            android:textColor="#FFFFFF"
-            android:textSize="45sp"
-            android:textStyle="bold" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
