--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainScreen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#74b9ff"
     tools:context=".MainActivity">
+
 
 
     <Button
@@ -112,14 +114,14 @@
 
     <Button
         android:id="@+id/langbutton"
-        android:layout_width="114dp"
-        android:layout_height="62dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="555dp"
         android:layout_marginEnd="90dp"
         android:layout_marginRight="90dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/rounded_button"
         android:shadowColor="#00000000"
         android:text="@string/lang"
@@ -131,7 +133,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/btnColChange"
+        android:layout_width="115dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="150dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="555dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginRight="90dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/rounded_button"
+        android:shadowColor="#00000000"
+        android:text="@string/change_color"
+        android:textAllCaps="false"
+        android:textSize="15sp"
+        android:typeface="normal"
+        app:fontFamily="@font/peace_sans"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btn_info"
