--- a/app/src/main/res/layout/activity_color.xml
+++ b/app/src/main/res/layout/activity_color.xml
@@ -29,7 +29,7 @@
         android:layout_width="55dp"
         android:layout_height="55dp"
 
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="400dp"
         android:layout_marginEnd="230dp"
         android:layout_marginRight="250dp"
         android:background="@mipmap/audio_round"
@@ -47,16 +47,16 @@
         android:layout_marginLeft="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
-        android:layout_marginBottom="0dp"
         android:background="@drawable/rounded_rectangle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.66999996">
 
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button_color_start"
             android:layout_width="160dp"
             android:layout_height="50dp"
             android:layout_marginStart="77dp"
